# Yuanbot

./: .env.dev  .gitignore  README.md  bot.db  bot.py  pyproject.toml  test.py
commands/echo/: echo.py
commands/help/: help.py
commands/img/: search_img.py
commands/permission/: group.py
commands/test/: test_reply.py
commands/tuling/: tuling.py
model/: db.py
utils/: UnittoNum.py  config.py  encrypt.py  wrapper.py
